# chad-core

./: .env.example  .gitignore  CLAUDE.md  QUEUE_WORKER_DEPLOYMENT.md  QUEUE_WORKER_IMPLEMENTATION_SUMMARY.md  README.md  Teletran1.md  pyproject.toml  render.yaml
apps/core_api/: deps.py  main.py
apps/core_api/routers/: act.py  approvals.py  runs.py
apps/queue_worker/: __init__.py  main.py
chad_agents/policies/: autonomy.py  policy_guard.py
chad_config/: settings.py
chad_notifications/: __init__.py  webhooks.py
infra/deployment/systemd/: README.md  chad-queue-worker.service
teletran1/: __init__.py  analyzer.py  cli.py  config.py  llm.py  models.py  notion_client.py
tests/: __init__.py  test_agent_loop.py  test_analyzer.py  test_policy.py  test_queue.py
